<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.stfx.sew.QuestionSectionOneActivity" >

    <TextView
        android:id="@+id/txtBanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:text="@string/txt_core_input_banner"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/txtCondition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtBanner"
        android:layout_margin="5dp"
        android:text="@string/txt_core_input_condition"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <RadioGroup
        android:id="@+id/rdgCondition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtCondition"
        android:layout_margin="10dp" >

        <RadioButton
            android:id="@+id/rdCondition1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/txt_condition_one" />

        <RadioButton
            android:id="@+id/rdCondition2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_condition_two" />
    </RadioGroup>
    
    <TextView
        android:id="@+id/txtSymptom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/txt_core_input_symptom"
        android:layout_below="@id/rdgCondition"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <RadioGroup
        android:id="@+id/rdgSymptom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtSymptom"
        android:layout_margin="10dp" >
        
        <RadioButton
            android:id="@+id/rdSymptom1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/txt_symptom_one" />
        
        <RadioButton
            android:id="@+id/rdSymptom2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_symptom_two" />
        
        <RadioButton
            android:id="@+id/rdSymptom3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_symptom_three" />
        
        <RadioButton
            android:id="@+id/rdSymptom4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_symptom_four" />
        
    </RadioGroup>

</RelativeLayout>