<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.stfx.sew.QoSInputActivity" >

    <LinearLayout
        android:id="@+id/llExecutionPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical" >
        
	    <TextView
	        android:id="@+id/tvExecutionPrice"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dip"
	        android:text="@string/txt_executionprice"
	    />
    
		<Spinner 
		     android:id="@+id/spnExecutionPrice"
		     android:layout_width="fill_parent"
		     android:layout_height="wrap_content"
		     android:entries="@array/executionprice_arrays"
		     android:prompt="@string/executionprice_prompt"
		/>
        
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/llResponseTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llExecutionPrice"
        android:layout_margin="10dp"
        android:orientation="vertical" >
		
         <TextView
	        android:id="@+id/tvResponseTime"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dip"
	        android:text="@string/txt_responsetime"
	    />
	
        <Spinner
		    android:id="@+id/spnResponseTime"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:entries="@array/responsetime_arrays"
		    android:prompt="@string/responsetime_prompt"/>
    
    </LinearLayout>
	
    <LinearLayout
        android:id="@+id/llReliability"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llResponseTime"
        android:layout_margin="10dp"
        android:orientation="vertical" >
		
         <TextView
	        android:id="@+id/tvReliability"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dip"
	        android:text="@string/txt_reliability"
	    />
	
        <Spinner
		    android:id="@+id/spnReliability"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:entries="@array/reliability_arrays"
		    android:prompt="@string/responsetime_prompt"/>
    
    </LinearLayout>
	 
</RelativeLayout>
